--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -16,7 +16,7 @@ a {
 }
 
 h1 {
- color: #27ae60; /* NEW Flat Green */
+ color: #4CAF50; /* NEW Flat Green */
 }
 
 h2 {
@@ -99,7 +99,7 @@ footer::before {
 .final-tagline {
   font-size: 1.2em; /* Make it slightly larger */
   font-weight: bold;
-  color: #27ae60; /* NEW Flat Green */
+  color: #4CAF50; /* NEW Flat Green */
   text-transform: uppercase;
   margin-top: 2rem; /* Add some space above it */
 }
